fix routes gh pages

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://areidec.github.io/sagirov-test/build/",
   "name": "sagirov-test",
   "version": "0.1.0",
   "private": true,
