--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://areidec.github.io/sagirov-test/build/",
+  "homepage": "https://areidec.github.io/sagirov-test",
   "name": "sagirov-test",
   "version": "0.1.0",
   "private": true,
